# red-specter-oracle

./: .gitignore  ARCHITECTURE.md  Dockerfile  INSTALL.md  README.md  SECURITY.md  USER_GUIDE.md  docker-compose.yml  pyproject.toml  setup.sh
oracle/: __init__.py
oracle/api/: app.py  routes.py  ui.py
oracle/cli/: __init__.py  commands.py
oracle/core/: banner.py  config.py  crypto.py  logger.py  ollama_client.py  vector_store.py
oracle/db/: database.py
oracle/graph/: __init__.py  engine.py  extractor.py  routes.py  ui.py
oracle/intake/: chunker.py  embedder.py  engine.py  handler.py
oracle/intake/parsers/: __init__.py  binary_handler.py  code_parser.py  image_handler.py  ocr_handler.py  pdf_parser.py
oracle/query/: __init__.py  confidence.py  engine.py  parser.py  retriever.py  synthesiser.py  ui.py
oracle/validation/: __init__.py  audit.py  detector.py  patterns.py  profiler.py  routes.py
tests/: test_final.py  test_oracle.py  test_sprint2.py  test_sprint3.py  test_sprint4.py  test_sprint5.py  test_sprint6.py
